fix(ui): corregir estilos y diseño visual en toda la aplicación

--- a/src/main/resources/ventanas/agregarpregunta.fxml
+++ b/src/main/resources/ventanas/agregarpregunta.fxml
@@ -2,32 +2,41 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bd_edu.controllers.AgregarPreguntaController"
-            prefHeight="400.0" prefWidth="500.0"
-            stylesheets="@../estilos.css">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" styleClass="anchor-pane" stylesheets="@../estilos.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.12" fx:controller="com.example.bd_edu.controllers.AgregarPreguntaController">
 
-    <VBox spacing="15" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
-        <Label text="Agregar Nueva Pregunta" styleClass="label-titulo"/>
+    <VBox alignment="CENTER" spacing="20" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20">
+        <!-- Título -->
+        <Label styleClass="label-titulo" text="Agregar Nueva Pregunta">
+            <font>
+                <Font name="Segoe UI" size="24.0" />
+            </font>
+        </Label>
 
-        <TextArea fx:id="preguntaTextArea" promptText="Escriba el texto de la pregunta" prefHeight="100"/>
+        <!-- Área de texto para la pregunta -->
+        <TextArea fx:id="preguntaTextArea" prefHeight="120" prefWidth="500" promptText="Escriba el texto de la pregunta" styleClass="text-field" />
 
-        <HBox spacing="15" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" >
-            <ComboBox fx:id="tipoPreguntaCombo" promptText="Seleccione el tipo de pregunta"/>
-            <ComboBox fx:id="areaPregunta" promptText="Seleccione el tema de la pregunta"/>
+        <!-- ComboBox para tipo y área de pregunta -->
+        <HBox alignment="CENTER" spacing="20">
+            <ComboBox fx:id="tipoPreguntaCombo" prefHeight="51.0" prefWidth="240" promptText="Seleccione el tipo de pregunta" styleClass="text-field" />
+            <ComboBox fx:id="areaPregunta" prefWidth="266.0" promptText="Seleccione el tema de la pregunta" styleClass="text-field" />
         </HBox>
 
-        <HBox spacing="15" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
-            <TextField fx:id="porcentajeField" promptText="Porcentaje de la nota (Ej: 25)"/>
-            <TextField fx:id="respuesta" promptText="Respuesta a la pregunta"/>
+        <!-- Campos para porcentaje y respuesta -->
+        <HBox alignment="CENTER" spacing="20">
+            <TextField fx:id="porcentajeField" prefWidth="240" promptText="Porcentaje de la nota (Ej: 25)" styleClass="text-field" />
+            <TextField fx:id="respuesta" prefWidth="240" promptText="Respuesta a la pregunta" styleClass="text-field" />
         </HBox>
 
-        <ComboBox fx:id="permisoPreguntaCombo" promptText="Seleccione el estado"/>
+        <!-- ComboBox para estado de la pregunta -->
+        <ComboBox fx:id="permisoPreguntaCombo" prefWidth="500" promptText="Seleccione el estado" styleClass="text-field" />
 
-        <Button fx:id="guardarButton" text="Guardar Pregunta" onAction="#guardarPregunta" styleClass="button"/>
+        <!-- Botones -->
+        <HBox alignment="CENTER" spacing="30">
+            <Button fx:id="guardarButton" onAction="#guardarPregunta" prefWidth="200" styleClass="button" text="Guardar Pregunta" />
 
-        <Button fx:id="volverButton" text="Regresar" onAction="#volver" styleClass="boton-regresar"/>
-
+            <Button fx:id="volverButton" onAction="#volver" prefWidth="200" styleClass="boton-regresar" text="Regresar" />
+        </HBox>
     </VBox>
 </AnchorPane>
