--- a/src/main/resources/ventanas/programarexamen.fxml
+++ b/src/main/resources/ventanas/programarexamen.fxml
@@ -1,78 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bd_edu.controllers.ProgramarExamenController"
-            prefWidth="600.0" prefHeight="400.0"
-            stylesheets="@app.css">
+<AnchorPane prefHeight="500.0" prefWidth="650.0" styleClass="anchor-pane" stylesheets="@../estilos.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bd_edu.controllers.ProgramarExamenController">
 
-    <VBox spacing="15"
-          AnchorPane.topAnchor="10"
-          AnchorPane.leftAnchor="10"
-          AnchorPane.rightAnchor="10"
-          AnchorPane.bottomAnchor="10">
+    <VBox alignment="TOP_CENTER" spacing="20" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20">
 
-        <!-- Título -->
-        <Label text="Programar Examen"
-               styleClass="label-titulo"/>
+        <!-- Título centrado -->
+        <Label styleClass="label-titulo" text="Programar Examen">
+            <font>
+                <Font name="Segoe UI" size="24" />
+            </font>
+            <padding>
+                <Insets bottom="10" />
+            </padding>
+        </Label>
 
-        <!-- Selección de examen -->
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label text="Examen:"/>
-            <ComboBox fx:id="examenCombo"
-                      promptText="Seleccione examen"
-                      styleClass="combo-box"/>
+        <!-- Formulario de programación -->
+        <GridPane hgap="15" prefWidth="600" vgap="15">
+            <columnConstraints>
+                <ColumnConstraints halignment="RIGHT" prefWidth="150" />
+                <ColumnConstraints halignment="LEFT" prefWidth="250" />
+                <ColumnConstraints halignment="RIGHT" prefWidth="150" />
+                <ColumnConstraints halignment="LEFT" prefWidth="250" />
+            </columnConstraints>
+
+            <!-- Fila 1: Examen y Curso -->
+            <Label styleClass="text-label" text="Examen:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <ComboBox fx:id="examenCombo" prefWidth="250" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+            <Label styleClass="text-label" text="Curso:" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+            <ComboBox fx:id="cursoChoice" prefWidth="250" styleClass="combo-box" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+
+            <!-- Fila 2: Fecha y Hora -->
+            <Label styleClass="text-label" text="Fecha:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <DatePicker fx:id="fechaPicker" prefWidth="250" styleClass="date-picker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+            <Label styleClass="text-label" text="Hora:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <HBox spacing="5" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <Spinner fx:id="horaSpinner" prefWidth="80" styleClass="spinner" />
+                <Label styleClass="text-label" text=":" />
+                <Spinner fx:id="minutoSpinner" prefWidth="80" styleClass="spinner" />
+            </HBox>
+
+            <!-- Fila 3: Tiempo y Umbral -->
+            <Label styleClass="text-label" text="Tiempo Límite:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <TextField fx:id="tiempoLimite" prefWidth="100" promptText="Minutos" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+            <Label prefHeight="18.0" prefWidth="105.0" styleClass="text-label" text="Umbral Aprobación:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextField fx:id="umbralAprobacion" prefHeight="42.0" prefWidth="126.0" promptText="Porcentaje" styleClass="text-field" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
+        </GridPane>
+
+        <!-- Botones -->
+        <HBox alignment="CENTER" spacing="20">
+            <Button fx:id="programarButton" onAction="#programarExamen" prefHeight="40" prefWidth="200" styleClass="button" text="Programar Examen" />
+            <Button fx:id="volverButton" onAction="#volver" prefHeight="40" prefWidth="200" styleClass="boton-regresar" text="Regresar" />
         </HBox>
-
-        <!-- Fecha -->
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label text="Fecha:"/>
-            <DatePicker fx:id="fechaPicker"
-                        styleClass="text-field"/>
-        </HBox>
-
-
-        <!-- Hora -->
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label text="Hora:"/>
-            <Spinner fx:id="horaSpinner"
-                     prefWidth="80"
-                     styleClass="spinner"/>
-            <Label text=":"/>
-            <Spinner fx:id="minutoSpinner"
-                     prefWidth="80"
-                     styleClass="spinner"/>
-        </HBox>
-
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label text="Tiempo Limite: "/>
-            <TextField fx:id="tiempoLimite" promptText="Minutos" styleClass="text-field"/>
-        </HBox>
-
-
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label layoutX="208.0" layoutY="106.0" text="Curso" />
-            <ComboBox fx:id="cursoChoice" layoutX="208.0" layoutY="123.0" prefWidth="150.0" />
-        </HBox>
-
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label text="Umbral aprobación: "/>
-            <TextField fx:id="umbralAprobacion" promptText="aprobacion" styleClass="text-field"/>
-        </HBox>
-        <!-- Botón principal -->
-        <Button fx:id="programarButton"
-                text="Programar Examen"
-                onAction="#programarExamen"
-                maxWidth="Infinity"
-                styleClass="button"/>
-
-        <!-- Botón de regreso -->
-        <Button fx:id="volverButton"
-                text="Regresar"
-                onAction="#volver"
-                styleClass="boton-regresar"/>
-
     </VBox>
 </AnchorPane>
