--- a/src/main/resources/ventanas/seleccionMultiple.fxml
+++ b/src/main/resources/ventanas/seleccionMultiple.fxml
@@ -3,73 +3,105 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
+<AnchorPane xmlns="http://javafx.com/javafx/17"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.example.bd_edu.controllers.PreguntaSeleccionMultiple"
-            prefWidth="600" prefHeight="500">
+            prefWidth="700" prefHeight="600"
+            styleClass="anchor-pane"
+            stylesheets="@../estilos.css">
 
-    <children>
-        <VBox alignment="TOP_CENTER" spacing="10" layoutX="50" layoutY="20" prefWidth="500">
-            <children>
+    <VBox alignment="TOP_CENTER" spacing="20"
+          AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.bottomAnchor="20">
 
-                <Label text="Registrar Pregunta de Selección Múltiple" style="-fx-font-size: 18px; -fx-font-weight: bold;" />
+        <!-- Title -->
+        <Label text="Registrar Pregunta de Selección Múltiple" styleClass="label-titulo">
+            <font>
+                <Font name="Segoe UI" size="20"/>
+            </font>
+            <padding>
+                <Insets bottom="10"/>
+            </padding>
+        </Label>
 
-                <Label text="Enunciado:" />
-                <TextField fx:id="enunciadoField" promptText="Ingrese el enunciado de la pregunta" maxWidth="400"/>
+        <!-- Question Statement -->
+        <GridPane hgap="10" vgap="10" prefWidth="650">
+            <columnConstraints>
+                <ColumnConstraints prefWidth="120" halignment="RIGHT"/>
+                <ColumnConstraints prefWidth="530" halignment="LEFT"/>
+            </columnConstraints>
 
-                <Label text="Opciones (marque las correctas):" />
+            <Label text="Enunciado:" styleClass="text-label" GridPane.rowIndex="0"/>
+            <TextField fx:id="enunciadoField" promptText="Ingrese el enunciado de la pregunta"
+                      styleClass="text-field"
+                      GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        </GridPane>
 
-                <VBox spacing="10">
-                    <!-- Opciones con TextFields + CheckBoxes -->
-                    <HBox spacing="10" alignment="CENTER_LEFT">
-                        <CheckBox fx:id="opcion1" text="Opción 1" />
-                        <TextField fx:id="opcionField1" promptText="Escriba opción 1"/>
-                    </HBox>
+        <!-- Options Section -->
+        <Label text="Opciones (marque las correctas):" styleClass="label-subtitulo"/>
 
-                    <HBox spacing="10" alignment="CENTER_LEFT">
-                        <CheckBox fx:id="opcion2" text="Opción 2" />
-                        <TextField fx:id="opcionField2" promptText="Escriba opción 2"/>
-                    </HBox>
+        <GridPane hgap="10" vgap="10" prefWidth="650">
+            <columnConstraints>
+                <ColumnConstraints prefWidth="40" halignment="CENTER"/>
+                <ColumnConstraints prefWidth="610" halignment="LEFT"/>
+            </columnConstraints>
 
-                    <HBox spacing="10" alignment="CENTER_LEFT">
-                        <CheckBox fx:id="opcion3" text="Opción 3" />
-                        <TextField fx:id="opcionField3" promptText="Escriba opción 3"/>
-                    </HBox>
+            <!-- Option 1 -->
+            <CheckBox fx:id="opcion1" styleClass="checkbox-option" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+            <TextField fx:id="opcionField1" promptText="Escriba opción 1" styleClass="text-field"
+                       GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
-                    <HBox spacing="10" alignment="CENTER_LEFT">
-                        <CheckBox fx:id="opcion4" text="Opción 4" />
-                        <TextField fx:id="opcionField4" promptText="Escriba opción 4"/>
-                    </HBox>
-                </VBox>
+            <!-- Option 2 -->
+            <CheckBox fx:id="opcion2" styleClass="checkbox-option" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+            <TextField fx:id="opcionField2" promptText="Escriba opción 2" styleClass="text-field"
+                       GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
-                <HBox spacing="10" alignment="CENTER_LEFT">
-                    <children>
-                        <Label text="Estado:"/>
-                        <ComboBox fx:id="comboEstado" promptText="Seleccione estado" prefWidth="150"/>
-                        <Label text="Tema:"/>
-                        <ComboBox fx:id="comboTema" promptText="Seleccione tema" prefWidth="150"/>
-                    </children>
-                </HBox>
+            <!-- Option 3 -->
+            <CheckBox fx:id="opcion3" styleClass="checkbox-option" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+            <TextField fx:id="opcionField3" promptText="Escriba opción 3" styleClass="text-field"
+                       GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
-                <HBox spacing="10" alignment="CENTER_LEFT">
-                    <children>
-                        <Label text="Porcentaje:"/>
-                        <TextField fx:id="porcentajeField" promptText="Ingrese porcentaje" prefWidth="100"/>
-                        <Label text="Tiempo (segundos):"/>
-                        <TextField fx:id="tiempoField" promptText="Tiempo" prefWidth="100"/>
-                    </children>
-                </HBox>
+            <!-- Option 4 -->
+            <CheckBox fx:id="opcion4" styleClass="checkbox-option" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+            <TextField fx:id="opcionField4" promptText="Escriba opción 4" styleClass="text-field"
+                       GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+        </GridPane>
 
-                <HBox spacing="20" alignment="CENTER">
-                    <children>
-                        <Button fx:id="guardarButton" text="Guardar Pregunta" onAction="#guardarPregunta"/>
-                        <Button fx:id="volverButton" text="Volver" onAction="#volver"/>
-                    </children>
-                </HBox>
+        <!-- Configuration Section -->
+        <GridPane hgap="10" vgap="10" prefWidth="650">
+            <columnConstraints>
+                <ColumnConstraints prefWidth="120" halignment="RIGHT"/>
+                <ColumnConstraints prefWidth="200" halignment="LEFT"/>
+                <ColumnConstraints prefWidth="120" halignment="RIGHT"/>
+                <ColumnConstraints prefWidth="210" halignment="LEFT"/>
+            </columnConstraints>
 
-            </children>
-            <padding><Insets top="10" right="20" bottom="10" left="20"/></padding>
-        </VBox>
-    </children>
+            <!-- State and Theme -->
+            <Label text="Estado:" styleClass="text-label" GridPane.rowIndex="0"/>
+            <ComboBox fx:id="comboEstado" styleClass="combo-box"
+                      GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+            <Label text="Tema:" styleClass="text-label" GridPane.rowIndex="0" GridPane.columnIndex="2"/>
+            <ComboBox fx:id="comboTema" styleClass="combo-box"
+                      GridPane.rowIndex="0" GridPane.columnIndex="3"/>
+
+            <!-- Percentage and Time -->
+            <Label text="Porcentaje:" styleClass="text-label" GridPane.rowIndex="1"/>
+            <TextField fx:id="porcentajeField" promptText="Ingrese porcentaje" styleClass="text-field"
+                       GridPane.rowIndex="1" GridPane.columnIndex="1" prefWidth="100"/>
+
+            <Label text="Tiempo (segundos):" styleClass="text-label" GridPane.rowIndex="1" GridPane.columnIndex="2"/>
+            <TextField fx:id="tiempoField" promptText="Tiempo" styleClass="text-field"
+                       GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="100"/>
+        </GridPane>
+
+        <!-- Action Buttons -->
+        <HBox spacing="20" alignment="CENTER">
+            <Button fx:id="guardarButton" text="Guardar Pregunta"
+                    onAction="#guardarPregunta" styleClass="button" prefWidth="200" prefHeight="40"/>
+            <Button fx:id="volverButton" text="Volver"
+                    onAction="#volver" styleClass="boton-regresar" prefWidth="200" prefHeight="40"/>
+        </HBox>
+    </VBox>
 </AnchorPane>
